# Instagram-Reels-Scraper

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes_destination.py  routes_proxy_image.py  routes_runs.py  routes_sources.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/integrations/apify/: __init__.py  aimscrape_provider.py  normalize.py  provider.py
backend/app/jobs/: __init__.py  queue.py  tasks.py
backend/app/models/: __init__.py  delivered_item.py  run.py  run_media_item.py  source.py
backend/app/schemas/: __init__.py  pipeline.py  run.py  source.py
backend/app/services/: destination_client.py  media_storage.py  pipeline_service.py
backend/scripts/: run_worker.ps1  run_worker.sh
backend/tests/: test_media_storage.py  test_normalize.py  test_proxy_image.py
docs/: architecture-design.md  code-flow.md  system-design-production.md  system-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: VideoResultList.tsx
frontend/src/lib/: payload.ts  thumbnailUrl.ts
frontend/src/pages/: FindMediaPage.tsx  HistoryPage.tsx
